Image Analysis
- adding the ability to check image scans - you can scan all tags, limit to a few or a specifc tag
- adding the tags to the get repository
