# pkg/transport/models/image_analysis_list.go
@@ -1,0 +1,149 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+//
+// Copyright (C) 2019  Rohith Jayawardene <gambol99@gmail.com>
+//
+// This program is free software; you can redistribute it and/or
+// modify it under the terms of the GNU General Public License
+// as published by the Free Software Foundation; either version 2
+// of the License, or (at your option) any later version.
+//
+// This program is distributed in the hope that it will be useful,
+// but WITHOUT ANY WARRANTY; without even the implied warranty of
+// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+// GNU General Public License for more details.
+//
+// You should have received a copy of the GNU General Public License
+// along with this program.  If not, see <http://www.gnu.org/licenses/>.
+//
+//
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"strconv"
+
+	strfmt "github.com/go-openapi/strfmt"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/swag"
+)
+
+// ImageAnalysisList The resource definition for the results of a image scan on a
+// swagger:model ImageAnalysisList
+type ImageAnalysisList struct {
+	Object
+
+	// items
+	Items []*ImageAnalysis `json:"items"`
+}
+
+// UnmarshalJSON unmarshals this object from a JSON structure
+func (m *ImageAnalysisList) UnmarshalJSON(raw []byte) error {
+	// AO0
+	var aO0 Object
+	if err := swag.ReadJSON(raw, &aO0); err != nil {
+		return err
+	}
+	m.Object = aO0
+
+	// now for regular properties
+	var propsImageAnalysisList struct {
+		Items []*ImageAnalysis `json:"items"`
+	}
+	if err := swag.ReadJSON(raw, &propsImageAnalysisList); err != nil {
+		return err
+	}
+	m.Items = propsImageAnalysisList.Items
+
+	return nil
+}
+
+// MarshalJSON marshals this object to a JSON structure
+func (m ImageAnalysisList) MarshalJSON() ([]byte, error) {
+	_parts := make([][]byte, 0, 1)
+
+	aO0, err := swag.WriteJSON(m.Object)
+	if err != nil {
+		return nil, err
+	}
+	_parts = append(_parts, aO0)
+
+	// now for regular properties
+	var propsImageAnalysisList struct {
+		Items []*ImageAnalysis `json:"items"`
+	}
+	propsImageAnalysisList.Items = m.Items
+
+	jsonDataPropsImageAnalysisList, errImageAnalysisList := swag.WriteJSON(propsImageAnalysisList)
+	if errImageAnalysisList != nil {
+		return nil, errImageAnalysisList
+	}
+	_parts = append(_parts, jsonDataPropsImageAnalysisList)
+	return swag.ConcatJSON(_parts...), nil
+}
+
+// Validate validates this image analysis list
+func (m *ImageAnalysisList) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	// validation for a type composition with Object
+	if err := m.Object.Validate(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validateItems(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (m *ImageAnalysisList) validateItems(formats strfmt.Registry) error {
+
+	if swag.IsZero(m.Items) { // not required
+		return nil
+	}
+
+	for i := 0; i < len(m.Items); i++ {
+		if swag.IsZero(m.Items[i]) { // not required
+			continue
+		}
+
+		if m.Items[i] != nil {
+			if err := m.Items[i].Validate(formats); err != nil {
+				if ve, ok := err.(*errors.Validation); ok {
+					return ve.ValidateName("items" + "." + strconv.Itoa(i))
+				}
+				return err
+			}
+		}
+
+	}
+
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *ImageAnalysisList) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *ImageAnalysisList) UnmarshalBinary(b []byte) error {
+	var res ImageAnalysisList
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
